sonar code fixes