@@ -48,10 +48,10 @@ public class BulkPrintHandler {
     @EventListener
     public BulkPrintDetails print(DocumentReadyToPrintEvent event) {
         requireNonNull(event);
-        Claim claim = event.getClaim();
+        var claim = event.getClaim();
         BulkPrintDetails bulkPrintDetails;
         if (launchDarklyClient.isFeatureEnabled("new-defendant-pin-letter", LaunchDarklyClient.CLAIM_STORE_USER)) {
-            bulkPrintDetails = bulkPrintService.printPdf(claim, ImmutableList.of(
+            bulkPrintDetails = bulkPrintService.printPdf(claim, List.of(
                 new PrintableTemplate(
                     event.getDefendantLetterDocument(),
                     buildDefendantLetterFileBaseName(claim.getReferenceNumber())),
@@ -63,7 +63,7 @@ public class BulkPrintHandler {
                 event.getAuthorisation()
             );
         } else {
-            bulkPrintDetails = bulkPrintService.printHtmlLetter(claim, ImmutableList.of(
+            bulkPrintDetails = bulkPrintService.printHtmlLetter(claim, List.of(
                 new PrintableTemplate(
                     event.getDefendantLetterDocument(),
                     buildDefendantLetterFileBaseName(claim.getReferenceNumber())),
@@ -83,7 +83,7 @@ public class BulkPrintHandler {
         requireNonNull(authorisation);
         return bulkPrintService.printPdf(
             claim,
-            ImmutableList.of(
+            List.of(
                 new PrintableTemplate(
                     coverSheet,
                     buildCoverSheetFileBaseName(claim.getReferenceNumber())),
@@ -103,7 +103,7 @@ public class BulkPrintHandler {
 
         return bulkPrintService.printPdf(
             claim,
-            ImmutableList.of(
+            List.of(
                 new PrintablePdf(
                     generalLetterDocument,
                     buildLetterFileBaseName(claim.getReferenceNumber(),
